# sharpness-aware-pc

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: README.md  main.yaml
hessian_reg/: README.md  run.py  trainer.py
hessian_reg/datasets/: __init__.py  binary.py  synthetic.py
hessian_reg/experiments/: loss_landscape.py  sharpness.py
hessian_reg/models/: __init__.py  base.py  pfc_wrapper.py  pyjuice_wrapper.py
hessian_reg/utils/: __init__.py  env.py  hessian.py  plot_learning.py  profiler_reg.py
scripts/: download_debd.py  killall.sh  plot_learning_curves.sh  run_sample_experiments.sh  runall_einsum_experiments.sh  runall_pyjuice_experiments.sh  visualize_loss_surface.sh
tests/: conftest.py  test_binary_datasets.py  test_einet.py  test_packages.py  test_pfc_wrapper.py  test_pyjuice.py  test_synthetic.py
